--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -85,6 +85,13 @@
      <Compile Include="Assets\ThirdParty\CodeMonkey\CMDebug.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\FunctionPeriodic.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\Draggable.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Door.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Room.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\RoomRuntimeSet.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\HUD.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Managers\NegativeEventsManager.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\DifficultySystem\EventConfigSO.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\DifficultySystem\WaveConfigSO.cs" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF.shader" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
