--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -41,13 +41,17 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\Draggable.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\Button_UI.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\World_Mesh.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Room.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\DragBox.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\MonoBehaviours\CameraFollowSetup.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Door.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\MonoBehaviours\CameraFollow.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\UnitProducer.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\World_Bar.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\DifficultySystem\EventConfigSO.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\ElementRuntimeSet.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\SelectController.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\Selected.cs" />
@@ -55,10 +59,12 @@
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\FunctionTimer.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Variables\FloatVariable.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\Selectable.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Managers\NegativeEventsManager.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScrollUV.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\HealthBar.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\UI_Sprite.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\ManagerRuntimeSet.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\RoomRuntimeSet.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Events\GameEventListener.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\PeaRuntimeSet.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\UI_TextComplex.cs" />
@@ -75,23 +81,24 @@
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Variables\FloatReference.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\RuntimeSet.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Events\GameEvent.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\DifficultySystem\WaveConfigSO.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\Element.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\GlobalSelection.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\UI_Bar.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\HUD.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Tasks\Asteroids.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\MonoBehaviours\ComponentActions.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\UI_BarMultiple.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Managers\ResourceManager.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\CMDebug.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\FunctionPeriodic.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\Draggable.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Door.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Room.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\RoomRuntimeSet.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\HUD.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Managers\NegativeEventsManager.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\DifficultySystem\EventConfigSO.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\DifficultySystem\WaveConfigSO.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\RepairBar.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Events\NegativeEvent.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\GrowThenShrink.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\ProjectileEvent.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Managers\CameraShake.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Obstacle.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\ObstacleRemover.cs" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF.shader" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
