--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -98,6 +98,7 @@
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\World_Sprite.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\MonoBehaviours\PositionRendererSorter.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Variables\FloatReference.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\PeaAnimationFlags.cs" />
      <Compile Include="Assets\Peas in a Pod\Imported Packages\SlimUI\Modern Menu 1\Scripts\FlexibleUIElement.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\DifficultySystem\WaveConfigSO.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\GlobalSelection.cs" />
@@ -106,6 +107,7 @@
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Obstacle.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\CMDebug.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\FunctionPeriodic.cs" />
+     <Compile Include="Assets\FlipSprite.cs" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF.shader" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
