--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\RoomRuntimeSet.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\GrowThenShrink.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\UI_TextComplex.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\UIScripts\ColorGradient.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Tasks\ResourceStation.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Turret.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\Button_Sprite.cs" />
@@ -63,8 +64,11 @@
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\RuntimeSet.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Events\GameEvent.cs" />
      <Compile Include="Assets\Peas in a Pod\Imported Packages\SlimUI\Modern Menu 1\Scripts\MainMenuNew.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\FlipSprite.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ScriptableObjects\Sets\Element.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\UI_Bar.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Tasks\ArrowIndicator.cs" />
+     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Window.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Tasks\Asteroids.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\UI_BarMultiple.cs" />
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\Managers\ResourceManager.cs" />
@@ -107,10 +111,8 @@
      <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Obstacle.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\CMDebug.cs" />
      <Compile Include="Assets\ThirdParty\CodeMonkey\Utils\FunctionPeriodic.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Character\FlipSprite.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\ShipObjects\Window.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\UIScripts\ColorGradient.cs" />
-     <Compile Include="Assets\Peas in a Pod\Code\Scripts\Tasks\ArrowIndicator.cs" />
+     <Compile Include="Assets\PlanetManager.cs" />
+     <Compile Include="Assets\Planet.cs" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF.shader" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\ThirdParty\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
